--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test
-  - npm run build
+  - yarn test
+  - yarn run build
 after_success:
   - git config --global user.name "rtnogueira"
   - git config --global user.email "14441214+rtnogueira@users.noreply.github.com"
   - git remote rm origin
   - git remote add origin https://rtnogueira:${7d60af2337dcc8b3c019d60c0a578965e36ab935}@github.com/rtnogueira/nif-generator.git
-  - npm run deploy
+  - yarn run deploy
