--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ after_success:
   - git config --global user.name "rtnogueira"
   - git config --global user.email "14441214+rtnogueira@users.noreply.github.com"
   - git remote rm origin
-  - git remote add origin https://rtnogueira:${7d60af2337dcc8b3c019d60c0a578965e36ab935}@github.com/rtnogueira/nif-generator.git
+  - git remote add origin https://rtnogueira:${$GITHUB_TOKEN}@github.com/rtnogueira/nif-generator.git
   - yarn run deploy
