feat: Add export to xlsx feature

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
     "cross-env": "^7.0.2",
+    "file-saver": "^2.0.2",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,7 +17,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "xlsx": "^0.15.6"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development react-scripts start",
