--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
     - node_modules
 script:
   - yarn test
-  - yarn run build
+  - yarn build
 deploy:
   provider: pages
   skip_cleanup: true
