--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "private": true,
   "homepage": "https://rtnogueira.github.io/nif-generator/",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "classnames": "^2.3.1",
-    "copy-to-clipboard": "^3.3.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "classnames": "^2.5.1",
+    "copy-to-clipboard": "^3.3.3",
     "cross-env": "^7.0.3",
     "file-saver": "^2.0.5",
-    "gh-pages": "^3.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
-    "xlsx": "^0.16.9"
+    "gh-pages": "^6.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
+    "react-redux": "^9.1.2",
+    "history": "^5.3.0",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development react-scripts start",
     "build": "cross-env NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
+    "predeploy": "pnpm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
