--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,6 @@ on:
       - master
 
 jobs:
-  # Job for PRs: Install, Test, Build (blocks merge if fails)
   test:
     name: Test and Build
     runs-on: ubuntu-latest
@@ -42,27 +41,23 @@ jobs:
       - name: Build
         run: pnpm build
 
-  # Job for master branch: Install, Test, Build, Deploy
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     
-    # Specify the GitHub Pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       contents: read
       pages: write
       id-token: write
     
-    # Allow only one concurrent deployment
     concurrency:
       group: "pages"
-      cancel-in-progress: false
+      cancel-in-progress: true
     
     steps:
       - name: Checkout code
