--- a/package.json
+++ b/package.json
@@ -3,34 +3,76 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://rtnogueira.github.io/nif-generator/",
+  "type": "module",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@tanstack/react-router": "^1.82.1",
+    "@tanstack/react-router-devtools": "^1.114.23",
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
-    "cross-env": "^7.0.3",
     "file-saver": "^2.0.5",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
-    "react-redux": "^9.1.2",
-    "history": "^5.3.0",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.9"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@tanstack/eslint-plugin-router": "^1.114.12",
+    "@tanstack/router-plugin": "1.125.6",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.13.10",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react-swc": "^3.8.1",
+    "@vitest/coverage-v8": "^3.0.8",
+    "@vitest/ui": "3.2.4",
+    "eslint": "9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import-helpers": "^2.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "8.26.1",
+    "vite": "^6.2.2",
+    "vite-plugin-html": "^3.2.2",
+    "vitest": "^3.1.1",
+    "vitest-dom": "^0.1.1"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development react-scripts start",
-    "build": "cross-env NODE_ENV=production react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "preinstall": "npx only-allow pnpm",
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "lint": "eslint",
+    "tscheck": "tsc -b --noEmit",
+    "format": "prettier \"**/*.{js,jsx,ts,tsx}\" --write",
+    "preview": "vite preview",
     "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist",
+    "test": "vitest"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "lint-staged": {
+    "*.[t|j]s?(x)": [
+      "pnpm lint"
+    ]
   },
   "browserslist": {
     "production": [
